minor asthetic changes